scripts/nullaway/annotator/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8.txt
../annotator/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/filesystem/PeerboxFile.java:66: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return checksum;
		^
    (see http://t.uber.com/nullaway )
../annotator/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/filesystem/UFID.java:42: error: [NullAway] dereferenced expression fileid is @Nullable
		return fileid.equals(otherUFID.getFileid())
		             ^
    (see http://t.uber.com/nullaway )
../annotator/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/filesystem/UFID.java:43: error: [NullAway] dereferenced expression owner is @Nullable
				&& owner.equals(otherUFID.getOwner());
				        ^
    (see http://t.uber.com/nullaway )
../annotator/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/Peer.java:15: error: [NullAway] @NonNull field address not initialized
	private InetAddress address;
	                    ^
    (see http://t.uber.com/nullaway )
../annotator/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/Peer.java:17: error: [NullAway] @NonNull field name not initialized
	private String name;
	               ^
    (see http://t.uber.com/nullaway )
../annotator/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/filesystem/VirtualFileSystem.java:34: error: [NullAway] initializer method does not guarantee @NonNull field filelist (line 28) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	private VirtualFileSystem(final Context ctx) {
	        ^
    (see http://t.uber.com/nullaway )
../annotator/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/filesystem/VirtualFileSystem.java:57: error: [NullAway] assigning @Nullable expression to @NonNull field
			vfs.filelist = Filelist.deserialize(datafile, path);
			             ^
    (see http://t.uber.com/nullaway )
../annotator/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/ui/FileView.java:102: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return model;
		^
    (see http://t.uber.com/nullaway )
../annotator/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/ui/PeerView.java:93: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return model;
		^
    (see http://t.uber.com/nullaway )
../annotator/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/Peerbox.java:151: error: [NullAway] method returns @Nullable, but superclass method nl.rug.peerbox.logic.Context.getVirtualFilesystem() returns @NonNull
	public VirtualFileSystem getVirtualFilesystem() {
	                         ^
    (see http://t.uber.com/nullaway )
../annotator/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/middleware/Receiver.java:59: error: [NullAway] dereferenced expression thread is @Nullable
		thread.interrupt();
		      ^
    (see http://t.uber.com/nullaway )
../annotator/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/middleware/ReliableMulticast.java:40: error: [NullAway] initializer method does not guarantee @NonNull fields sender (line 29), receiver (line 31), hostManager (line 38) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	private ReliableMulticast(InetAddress address, int port,
	        ^
    (see http://t.uber.com/nullaway )
../annotator/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/middleware/ReliableMulticast.java:83: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../annotator/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/middleware/Sender.java:76: error: [NullAway] dereferenced expression thread is @Nullable
		thread.interrupt();
		      ^
    (see http://t.uber.com/nullaway )
14 errors
